# MRO_CPPBRIDGE

./: .gitignore  CMakeLists.txt  README.md
include/core/: gimbal_control.hpp  image_stream_bridge.hpp  udp_relay.hpp
include/network/: socket_endpoint.hpp  socket_utils.hpp
include/ui/: main_window.hpp  module_config_dialog.hpp
include/utils/: json.hpp  logger.hpp  settings.hpp
src/: main.cpp
src/core/: gimbal_control.cpp  image_stream_bridge.cpp  udp_relay.cpp
src/network/: socket_utils.cpp
src/ui/: main_window.cpp  module_config_dialog.cpp
src/utils/: json.cpp  logger.cpp  settings.cpp
